[package]
name = "corvia-adapter-git"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/corvia/corvia-adapter-git"
homepage = "https://github.com/corvia/corvia"
rust-version = "1.88"
readme = "README.md"
description = "Git repository and source code ingestion adapter for Corvia using tree-sitter"
keywords = ["ai-agents", "tree-sitter", "code-analysis", "ingestion", "knowledge-graph"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
corvia-common = { git = "https://github.com/chunzhe10/corvia", tag = "v0.3.1" }
corvia-kernel = { git = "https://github.com/chunzhe10/corvia", tag = "v0.3.1" }
async-trait = "0.1"
tree-sitter = "0.26"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
git2 = "0.20"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
